--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
   </head>
-  
+
   <body>
     <nav class="navbar bg-body-tertiary navbar-expand-xxl fixed-top">
         <div class="container-fluid">
@@ -32,13 +32,13 @@
                 <a class="nav-link active" aria-current="page" href="index.html">Introduction</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="dataset.html">Dataset</a>
+                <a class="nav-link" href="dataset.html">Dataset and Problem</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="methodology.html">Methodology</a>
+                <a class="nav-link" href="methodology.html">Methodology and Experiment</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="result.html">Result</a>
+                <a class="nav-link" href="result.html">Conclusion and Future Work</a>
               </li>
             </ul>
           </div>
