--- a/methodology.html
+++ b/methodology.html
@@ -1,13 +1,23 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CT Scan</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-  </head>
-  <body>
-    <nav class="navbar bg-body-tertiary navbar-expand-xxl fixed-top">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>CT Scan</title>
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <!-- Font Awesome icons (free version)-->
+        <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="css/styles.css" rel="stylesheet" />
+    </head>
+    <body>
+        <!-- Navigation-->
+        <nav class="navbar bg-body-tertiary navbar-expand-xxl fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img src="icons/medical-team.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
@@ -19,26 +29,125 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html">Introduction</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="dataset.html">Dataset</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="methodology.html">Methodology</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="result.html">Result</a>
-              </li>
+                <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="index.html">Introduction</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="dataset.html">Dataset and Problem</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="methodology.html" text="#ffffff">Methodology and Experiment</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="result.html">Conclusion and Future Work</a>
+                </li>
             </ul>
           </div>
         </div>
     </nav>
-
-    
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-  </body>
+        <!-- Page Header-->
+        <header class="masthead" style="background-image: url('assets/img/meth_back.jpg')">
+            <div class="container position-relative px-4 px-lg-5">
+                    <div class="col-md-10 col-lg-8 col-xl-7">
+                        <div class="page-heading">
+                            <h1 class = "topic_text"> Methodology </h1>
+                            <span class="subheading"></span>
+                        </div>
+                    </div>
+            </div>
+        </header>
+        <!-- Main Content-->
+        <main class="mb-4">
+            <!--
+            <div class="container">
+                <div class="text-center mt-5">
+                </div>
+                <img src="assets/img/metho.jpg" alt="Flowers in Chania">
+            </div>-->
+            <section class="gradient-custom-5">
+                <div class="container py-5">
+                <div class="main-timeline-5">
+                  <p class="lead">  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Click for more details below </p>
+                  <br>
+                  <div class="timeline-5 right-5">
+                    <div class="card">
+                      <div class="card-body p-4">
+                        <h5> <a href="#method1" class="lead"> Tokenization/Parsing</a></h5>
+                        <p class="lead"> Remove stopwords, lemmatization, stemming</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="timeline-5 right-5">
+                    <div class="card">
+                      <div class="card-body p-4">
+                        <h5><a href="#method2" class="lead"> Search System and techniques</a></h5>
+                        <p class="lead"> BM25, Demographic Filtering. Relevance Boosting with Medical NER</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="timeline-5 right-5">
+                    <div class="card">
+                      <div class="card-body p-4">
+                        <h5><a href="#method3" class="lead"> Re-ranking System</a></h5>
+                        <p class="lead"> MonoBERT, DuoBERT</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="timeline-5 right-5">
+                    <div class="card">
+                      <div class="card-body p-4">
+                        <h1><a href="#method3" class="lead"> Adhoc Query Generation with T5 model</a></h1>
+                        <p class="lead">SIGIR query pairs for training, result boosting</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                </div>
+                </section>
+        <div class="container">
+                <div id = "method1" class="text-center mt-5">
+                      <h2>Tokenization/Parsing</h2>
+                </div>
+                <p class="lead"> method1 </p>
+        </main>
+        <div class="container">
+                <div id = "method2" class="text-center mt-5">
+                      <h2>Search System</h2>
+                </div>
+                <ul class="lead">
+                        <li>BM25</li>
+                        <p class="lead2">Introduced by <a href = "https://www.staff.city.ac.uk/~sbrp622/papers/foundations_bm25_review.pdf">
+                          Robertson and Jones </a>, BM25 is a widely used ranking function calculating the relevance of a document to a query.
+                          Meanwhile, BM25 also considers the frequency and distribution of query terms in the document.</p>
+                        <li>Demographic Filtering (DF)</li>
+                        <p class="lead2"> DF uses users' demographic data for ranking
+                          in the recommendation system. In our project, we apply it by extracting the minimum age, maximum age and gender from documents while
+                          extracting age, gender of the patient with Named Entity Recognition (NER).
+                           In addition, trials that does not match patient demographics are moved to the bottom of the initial ranking list/penalized by a factor.</p>
+                        <li>Relevance Boosting with Medical NER</li>
+                        <p class="lead2"> Keywords and condition section of clinical trials are extracted.
+                          We use biomedical NER to retrieve Biological_structure, Disease_disorder, Sign_symptom, History entities from doc.
+                          In addition, trials that match patient medical entities are boosted based on the number of matches. </p>
+                </ul>
+        </main>
+        <div class="container">
+                <div id = "method3" class="text-center mt-5">
+                      <h2>Re-ranking System</h2>
+                </div>
+                <ul class="lead">
+                        <li>MonoBERT</li>
+                          <p class="lead2"> </p>
+                        <li>DuoBERT</li>
+                          <p class="lead2"> </p>
+                </ul>
+        </main>
+        <div class="container">
+                <div id = "method4" class="text-center mt-5">
+                      <h2>Adhoc Query Generation with T5 model</h2>
+                </div>
+                <p class="lead"> method1 </p>
+        </main>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="js/scripts.js"></script>
+    </body>
 </html>
