--- a/result.html
+++ b/result.html
@@ -1,13 +1,23 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CT Scan</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-  </head>
-  <body>
-    <nav class="navbar bg-body-tertiary navbar-expand-xxl fixed-top">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>CT Scan</title>
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <!-- Font Awesome icons (free version)-->
+        <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="css/styles.css" rel="stylesheet" />
+    </head>
+    <body>
+        <!-- Navigation-->
+        <nav class="navbar bg-body-tertiary navbar-expand-xxl fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img src="icons/medical-team.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
@@ -19,26 +29,49 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html">Introduction</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="dataset.html">Dataset</a>
-              </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="methodology.html">Methodology</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="result.html">Result</a>
-              </li>
+                <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="index.html">Introduction</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="dataset.html">Dataset and Problem</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="methodology.html">Methodology and Experiment</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="result.html">Conclusion and Future Work</a>
+                </li>
             </ul>
           </div>
         </div>
     </nav>
+        <!-- Page Header-->
+        <header class="masthead" style="background-image: url('assets/img/bg-masthead.jpg')">
+            <div class="container position-relative px-4 px-lg-5">
+                        <div class="page-heading">
+                            <h1 class = "topic_text"> Conclusion and Future Work </h1>
+                            <span class="subheading"></span>
+                        </div>
+            </div>
+        </header>
+        <!-- Main Content-->
+        <main class="mb-4">
 
-    
+            <div class="container">
+                <div class="text-center mt-5">
+                    <h1>Conclusion</h1>
+                </div>
+                    <p class="lead"> According to previous experiment results, </p>
+            </div>
+            <div class="container">
+                <div class="text-center mt-5">
+                    <h1>Future Work</h1>
+                </div>
+                    <p class="lead"> In future work, </p>
+            </div>
 
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-  </body>
+        </main>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="js/scripts.js"></script>
+    </body>
 </html>
