--- a/dataset.html
+++ b/dataset.html
@@ -128,7 +128,7 @@
                     <p class="lead"> Each clinical trials has a variety of attributes (not all present for all trials). </p>
                 </div>
                 <div class = "row2">
-                    <div class = "column2">
+                    <div class = "column3">
                         <ul>
                            <li>brief_title</li>
                            <li>official_title</li>
@@ -137,7 +137,7 @@
                            <li>criteria</li>
                        </ul>
                     </div>
-                    <div class = "column2">
+                    <div class = "column3">
                         <ul>
                             <li>condition</li>
                             <li>gender</li>
@@ -157,6 +157,7 @@
                          is a relevant clinical trial for that patient, and the higher the clinical trial is on the list, the more relevant it is for that patient.
                     </p>
                 <img src="assets/img/problem.jpg" alt="Flowers in Chania">
+                <p style="text-align:right">picture adopted from <a href = "https://run.unl.pt/bitstream/10362/151156/1/Cardoso_2022.pdf">Cardoso 2022</a> </p>
             </div>
 
         </main>
