--- a/methodology.html
+++ b/methodology.html
@@ -50,7 +50,7 @@
             <div class="container position-relative px-4 px-lg-5">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="page-heading">
-                            <h1 class = "topic_text"> Methodology </h1>
+                            <h1 class = "topic_text"> Methodology and Experiment</h1>
                             <span class="subheading"></span>
                         </div>
                     </div>
@@ -58,12 +58,11 @@
         </header>
         <!-- Main Content-->
         <main class="mb-4">
-            <!--
             <div class="container">
                 <div class="text-center mt-5">
                 </div>
-                <img src="assets/img/metho.jpg" alt="Flowers in Chania">
-            </div>-->
+                <img src="assets/img/overview.jpg" alt="Flowers in Chania">
+            </div>
             <section class="gradient-custom-5">
                 <div class="container py-5">
                 <div class="main-timeline-5">
@@ -104,12 +103,16 @@
                 </div>
                 </div>
                 </section>
+
         <div class="container">
                 <div id = "method1" class="text-center mt-5">
                       <h2>Tokenization/Parsing</h2>
                 </div>
-                <p class="lead"> method1 </p>
+                <p class="lead"> Depending on the specific structure of the documents,
+                  we perform data preprocessing steps including removing stopwords, lemmatization, and stemming. </p>
         </main>
+                <br>
+                                    <hr>
         <div class="container">
                 <div id = "method2" class="text-center mt-5">
                       <h2>Search System</h2>
@@ -130,22 +133,52 @@
                           In addition, trials that match patient medical entities are boosted based on the number of matches. </p>
                 </ul>
         </main>
+                <br>
+                                    <hr>
         <div class="container">
                 <div id = "method3" class="text-center mt-5">
                       <h2>Re-ranking System</h2>
                 </div>
                 <ul class="lead">
+                  <p class="lead"> We applied two <a href = "https://aclanthology.org/N19-1423.pdf">
+                    BERT</a>-based models -- MonoBERT and DuoBERT -- introduced by
+                    <a href = "https://arxiv.org/pdf/1910.14424.pdf"> Nogueria et al. in 2019 </a>.
+                     MonoBERT and DuoBERT formulate the ranking problem as pointwise
+                     and pairwise classification respectively with more details below.
+
                         <li>MonoBERT</li>
-                          <p class="lead2"> </p>
+                          <p class="lead2"> MonoBERT is a BERT encoder with a single
+                            neuron output layer connected to the encoder's pooled layer with dropout.
+                            In addition to the pointwise approach, the re-rankers are
+                            also trained using a cross-entropy loss.</p>
+                          <p class="lead2"> Target labels are derived from corresponding relevance
+                            judgements of the training datasets. For SIGIR - revelance lables 0 constitutes
+                          negative exmaples while 1 and 2 constitute positive examples.
+                          For TREC - relevance labels 0 and 1 constitute 0 and 1 constitute negative examples
+                          and label 2 constitutes positive examples. </p>
+                          <p class="lead2"> We re-rank the top 100 documents according to the predicted raw score. </p>
                         <li>DuoBERT</li>
-                          <p class="lead2"> </p>
+                          <p class="lead2"> DuoBERT adopted a pairwise approach that compares
+                          pairs of documents. To illustrate, the re-reanker estimates the probability one candidate is more relevant to the other, denoted by
+                          <b>P(d<sub>i</sub> >d<sub>j</sub> | q, d<sub>i</sub>, d<sub>j</sub>) </b> where <b>d<sub>i</sub> >d<sub>j</sub></b> meaning
+                          <b>d<sub>i</sub></b> is more relevant than <b>d<sub>j</sub></b>. </p>
+                          <p class="lead2">We use a pretrained sentence transformer trained on <a href="https://nlp.stanford.edu/pubs/snli_paper.pdf">SNLI</a>,
+                          <a href="https://arxiv.org/pdf/1704.05426.pdf">MNLI</a>,
+                          <a href = "https://jgc128.github.io/mednli/">MEDNLI</a> and
+                          <a href = "https://aclanthology.org/2022.acl-long.511/"> SCINLI</a> to generate embeddings.</p>
+                          <p class="lead2"> Cosine similarity between query and 2 documents are calculated and negated.</p>
                 </ul>
         </main>
+        <br>
+                                    <hr>
         <div class="container">
                 <div id = "method4" class="text-center mt-5">
                       <h2>Adhoc Query Generation with T5 model</h2>
                 </div>
-                <p class="lead"> method1 </p>
+                <p class="lead"> A <a href = "https://arxiv.org/pdf/1910.10683.pdf"> Text-to-Text Transfer Transformer (T5)</a>-base
+                   model is finetuned for query generation. We trained the model on SIGIR (description, ad-hoc) query pairs.</p>
+                <p class="lead"> We found that the results often contain excerpts from the description. In addition, we boosted the results
+                  for TREC but Synthetic queries performs worse for SIGIR. </p>
         </main>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <script src="js/scripts.js"></script>
