--- a/result.html
+++ b/result.html
@@ -56,20 +56,60 @@
         </header>
         <!-- Main Content-->
         <main class="mb-4">
-
-            <div class="container">
-                <div class="text-center mt-5">
-                    <h1>Conclusion</h1>
+            <div id = "exp" class="container">
+                <div id = "method4" class="text-center mt-5">
+                      <h1>Experimental results</h1>
                 </div>
-                    <p class="lead"> According to previous experiment results, </p>
-            </div>
-            <div class="container">
-                <div class="text-center mt-5">
-                    <h1>Future Work</h1>
-                </div>
-                    <p class="lead"> In future work, </p>
+            <hr>
+            <div class = "row3">
+                      <div class = "column3">
+                        <h1></h1>
+                        <h1></h1>
+                        <h5> Different Sections of CTRs (SIGIR dataset)</h5>
+                        <img src="assets/img/bar1.jpg" alt="Flowers in Chania">
+                        </div>
+                        <div class = "column3">
+                            <h1></h1>
+                            <h1></h1>
+                            <h5> Different Types of Topics (SIGIR dataset)</h5>
+                            <img src="assets/img/bar2.jpg" alt="Flowers in Chania">
+                        </div>
+                    </div>
             </div>
 
+    </div>
+
+          <div class = "row4">
+                <div class = "column4">
+                    <h5 class="text-center mt-5"> Re-rank System Performance (TREC dataset)</h5>
+                    <br>
+                    <img src="assets/img/table2.jpg" alt="Flowers in Chania">
+                    <br>
+                </div>
+
+                <div class = "column4">
+                    <h5 class="text-center mt-5"> Re-rank System Performance (TREC dataset continued) </h5>
+                    <br>
+                    <img src="assets/img/table3.jpg" alt="Flowers in Chania">
+                    <br>
+                </div>
+
+                <div class = "column4">
+                    <h5 class="text-center mt-5"> Search System Performance (TREC dataset)</h5>
+                    <br>
+                    <img src="assets/img/table1.jpg" alt="Flowers in Chania">
+                    <br>
+                </div>
+          </div>
+        </div>
+        <div id = "exp" class="container">
+            <div id = "method4" class="text-center mt-5">
+                  <h1>Conclusion</h1>
+            </div>
+            <hr>
+            <p class="lead"> From above experimental results, we can see that our proposed models
+            achieve relatively decent performance in most tasks. However, </p>
+        </div>
         </main>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <script src="js/scripts.js"></script>
