--- a/result.html
+++ b/result.html
@@ -108,7 +108,33 @@
             </div>
             <hr>
             <p class="lead"> From above experimental results, we can see that our proposed models
-            achieve relatively decent performance in most tasks. However, </p>
+            achieve relatively decent performance. However, due to the complexity of the matching clinical
+            trials in nature, there are still many limitations and improvements open.
+            </p>
+            <div id = "method4" class="text-center mt-5">
+                  <h1>Future Work</h1>
+            </div>
+            <hr>
+            <p class="lead"> For future work, in addition to improving performances via techniques in
+                 Natural Language Processing or recommendation system, one possible solution is to integrate
+                other data structure, specifically graph in this case. </p>
+            <p class="lead"> Inspired by <a href="https://elischolar.library.yale.edu/cgi/viewcontent.cgi?article=1025&context=gsas_dissertations">
+                Chang (2021) </a> where similarity between patients are calculated and studied, we propose to
+                apply similar idea for comparing the topic and the clinical trial:
+            </p>
+            <p class="lead">
+                Pairs of clinical trial and the patient information will be represented both via
+                <a href = "https://www.nlm.nih.gov/healthit/snomedct/index.html" >Snomed CT</a> graph database and
+                a text encoder where BERT-based ones are desired choices.
+                After application of <a href="https://tkipf.github.io/graph-convolutional-networks/"> Graph Convolutional Network (GCN) </a>,
+                outputs from both encoders will be concatenated and passed the vector to a fully connected layer.
+                A semantic similarity score can be obtained from this vector.
+            </p>
+            <img src="assets/img/future.jpg" alt="Flowers in Chania">
+            <hr>
+            <div id = "method4" class="text-center mt-5">
+                  <h1>Thank you!</h1>
+            </div>
         </div>
         </main>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
