finish all content

--- a/index.html
+++ b/index.html
@@ -98,21 +98,21 @@
             <div class="row g-0">
                 <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/bg-showcase-1.jpg')"></div>
                 <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-                    <h2>Pros of using Clinical Trials</h2>
+                    <h2>Necessity of Clinical Trials</h2>
                     <p class="lead mb-0">Clinical trials prove the effectiveness of new medical treatments, including drugs, surgery, and behavior interventions, through evidence-based methods.</p>
                 </div>
             </div>
             <div class="row g-0">
                 <div class="col-lg-6 text-white showcase-img" style="background-image: url('assets/img/bg-showcase-2.jpg')"></div>
                 <div class="col-lg-6 my-auto showcase-text">
-                    <h2>Pain-points of using Clinical Trials</h2>
+                    <h2>Obstacles in Effective Clinical Trials</h2>
                     <p class="lead mb-0">Clinical trials are expensive, time-consuming, and often fail to recruit enough patients to establish clinical significance.</p>
                 </div>
             </div>
             <div class="row g-0">
                 <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/bg-showcase-3.jpg')"></div>
                 <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-                    <h2>Our idea</h2>
+                    <h2>What We Propose</h2>
                     <p class="lead mb-0">Automated methods can improve patient recruitment by reducing manual chart review, identifying eligible patients more quickly, and expanding the pool of potential candidates.</p>
                 </div>
             </div>
